--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "srt2vtt": "^1.2.0",
     "stream-transcoder": "0.0.5",
     "xml2js": "^0.4.4",
-    "xtend": "^4.0.0"
+    "xtend": "^4.0.0",
+    "fluent-ffmpeg": "*"
   }
 }
