--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "stream-transcoder": "0.0.5",
     "xml2js": "^0.4.4",
     "xtend": "^4.0.0",
-    "fluent-ffmpeg": "*"
+    "shelljs": "*"
   }
 }
